<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgHome"
    tools:context=".activities.HomeActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorTextSecond"
        android:text="@string/label1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <View
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:padding="5dp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/textMonth" />
        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMonth"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <View
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/textDate" />
        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider"/>
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDate"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <View
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivider"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/textYear" />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivider"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewYear"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorTextSecond"
            android:text="@string/label2" />

        <TextView
            android:id="@+id/textPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextSecond"
            android:layout_marginLeft="10dp"
            android:text="60 Days" />

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/seekPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isb_max="160"
            app:isb_min="60"
            app:isb_progress="25"
            app:isb_seek_smoothly="true"
            app:isb_ticks_count="6"
            app:isb_show_tick_texts="true"
            app:isb_tick_texts_size="15sp"
            app:isb_tick_texts_color="@color/colorTextPrimary"
            app:isb_thumb_color="@color/colorButton"
            app:isb_thumb_size="25dp"
            app:isb_show_indicator="circular_bubble"
            app:isb_indicator_color="@color/colorCheck"
            app:isb_indicator_text_color="@color/quantum_white_100"
            app:isb_indicator_text_size="18sp"
            app:isb_track_background_color="@color/quantum_grey"
            app:isb_track_background_size="4dp"
            app:isb_track_progress_color="@color/quantum_grey"
            app:isb_track_progress_size="4dp"
            app:isb_only_thumb_draggable="true"/>

    </LinearLayout>
</ScrollView>

    <Button
        android:layout_margin="10dp"
        android:background="@drawable/rounded_btn_no_padding"
        android:textColor="@color/quantum_white_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btnNext"
        android:text="@string/textNext"
        android:textAllCaps="false"/>
</RelativeLayout>